static/admin.css
/* ... */
.status-div {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    width: 420px;
    height: 50px;
}

/*sidenav elements*/

.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 3;
    top: 0;
    left: 0;
    background-color: #111;
    overflow-x: hidden;
    transition: 0.5s ease-in-out;
    padding: 20px 0;
}

.sidenav ul {
    padding: 0px;
    text-decoration: none;
    font-size: 12px;
    color: #ffffff;
    display: block;
    transition: 0.3s;
    cursor: pointer;
}

.sidenav li {
    text-decoration: none;
    color: #ffffff;
    display: flex;
    align-items: center;
    justify-content: space-between;
    transition: 0.3s;
}

.sidenav ul:hover {
    color: #03dac5;
}

.sidenav li:hover {
    color: #03dac5;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

.sidenav_elements {
    display: flex;
    height: 100%;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

.a-elements {
    margin-bottom: 20px;
    margin-left: 34px;
    display: flex;
    width: 180px;
    height: 100%;
    align-items: center;
    justify-content: center;
}

.table_search {
    width: 100%;
    position: fixed;
    height: 30px;
    display: flex;
    top: 70px;
    justify-content: flex-start;
    align-items: center;
    left: 80px;
}

.dataTables_length {
    position: fixed;
    top: 42px;
    right: 20px;
    color: whitesmoke;
    margin-bottom: 8px;
    background: #405d51;
    height: 71px;
    display: flex;
    z-index: 100;
    align-items: center;
    width: calc(100% - 1151px);
}

.dataTables_filter {
    position: fixed;
    color: whitesmoke;
    background: #405d51;
    width: calc(100% - 179px);
    height: 71px;
    top: 42px;
    left: 30px;
    display: flex;
    align-items: center;
    margin-bottom: 8px;
}

.dataTables_filter input {
    outline: none;
    width: 123px;
    height: 22px;
    font-size: 12px;
    font-weight: 700;

}

.dataTables_filter label {
    margin-left: 52px;
}

.dataTables_paginate {

    left: 80px;
    color: whitesmoke;

    margin-bottom: 8px;
}

.dataTables_paginate a {
    cursor: pointer;
    padding: 4px;
    color: whitesmoke;
    text-decoration: underline;

}

.region-in {
    cursor: not-allowed;
}

.dataTables_info {
    position: absolute;
    right: 30px;
    color: white;
    margin-bottom: 8px;
}

.buttons {
    background: white;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    height: 50px;
    position: fixed;
    width: 240px;
    bottom: 20px;
}

#filterButton, #clearButton {
    cursor: pointer;
    background: #0a4e25;
    border: none;
    width: 50px;
    height: 30px;
    color: white;
    font-size: 11px;
    font-weight: 700;
}

#closeButton {
    cursor: pointer;
    background: #ff8e3c;
    border: none;
    width: 50px;
    height: 30px;
    color: black;
    font-weight: 700;
    font-size: 11px;
}

#dropdown {
    position: relative;
    overflow: visible;
    display: inline-block;
    margin-top: 5px;
    padding: 17px;
}

#regiondrop {
    text-transform: uppercase
}

.dropbtn {
    padding: 0px 2px;
    background-color: transparent;
    color: white;
    border: none;
    cursor: pointer;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 100px;
    height: 300px;
    overflow-y: scroll;
    overflow-x: hidden;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 999;
    flex-direction: column;
    font-size: 14px;
    top: 40px;
    right: 47px;
}
.show{
    display: flex;
}

.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    cursor: pointer;
}

.dropdown-content a:hover {
    background-color: #f1f1f1;
}


.cb_container {
    width: 100%;
    height: fit-content;
    display: grid;
    justify-content: space-around;
    align-items: center;
}

.count_box {
    grid-area: div;
    resize: horizontal;
    min-width: 120px;
    max-width: 50vw;
}

h6 {
    cursor: pointer;
    padding: 4px;
}

::-webkit-scrollbar {
    width: 20px;

}

/* Track */
::-webkit-scrollbar-track {
    background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: grey;

}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: grey;
}


/*Dashboard View CSS*/

.dashboard_View {
    width: calc(100% - 33px);
    height: calc(100% - 76px);
    position: fixed;
    left: 30px;
    top: 56px;
    flex-direction: column;

}

.cb_container {
    display: grid;
    width: calc(100% - 30px);
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(1, 1fr);
    grid-gap: 10px;
    margin-top: 10px;
    margin-left: 15px;
}

.grid-box {

    text-align: center;
    border-radius: 4px;
    height: 200px;
    width: 300px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;

}

.gb_container {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-template-rows: repeat(1, 1fr);
    grid-gap: 10px;
    width: calc(100% - 30px);
    margin-top: 10px;
    margin-left: 15px;

}

.box1, .box2, .box3, .box4 {
    background-color: #aaf255;
}

canvas {
    width: 900px;
    height: 350px;
}

.graphbox {
    width: calc(100% - 3px);
    height: 352px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 4px;

    /*border: 0.5px solid black;*/

}

.head-text {
    width: 100%;
    height: 90px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.head-text span {
    font-size: 18px;
}

.count-text a {
    color: brown;
    cursor: pointer;
    font-weight: 800;
    font-size: 42px;
    text-decoration: black;
}

.count-text a:link {
    color: #03dac5;
}
/* ... */

